Painting unraveling works!